--- a/DSV/b/DSP_Toni.tex
+++ b/DSV/b/DSP_Toni.tex
@@ -36,7 +36,7 @@
 \twocolumn
 \pagestyle{fancy}
 \lhead{DSP Formelsammlung, \today}
-\rhead{Sedlmeier, Toni}
+\rhead{Sedlmeier Toni \& Kirschner Christoph}
 \section{Zahlenformate}
 \begin{center}
   \includegraphics[width=.5\textwidth]{./img/dynamic.png}
