--- a/VM/a/vm.tex
+++ b/VM/a/vm.tex
@@ -85,7 +85,7 @@
 Eine DGL n-ter Ordnung kann in ein DGL-System n-ter Ordnung umgewandelt werden:
   \begin{mdframed}[style=exercise]
     \begin{align}
-        a_n y^{(n)}(t) + ... + a_2 y^{''} + a_1 y^{'} = b_0u(t)
+        a_n y^{(n)}(t) + ... + a_2 y''(t) + a_1 y'(t)+ a_0 y(t)= b_0u(t)
     \end{align}
   \end{mdframed}
 Lösungsansatz für n=4: 
@@ -99,7 +99,7 @@ Lösungsansatz für n=4:
   \end{mdframed}
   \begin{mdframed}[style=exercise]
     \begin{align}
-        x_4^{'}(t) &= \frac{1}{a_4}[u(t)-a_3x_3(t)-a_2x_2(t)-a_1x_1(t)]
+        x_4^{'}(t) &= \frac{1}{a_4}[b_0 u(t) -a_3x_4(t) - a_2x_3(t)-a_1x_2(t)-a_0x_1(t)]
     \end{align}
   \end{mdframed}
 Zustandsraumdarstellung:
@@ -116,7 +116,7 @@ Zustandsraumdarstellung:
             0 & 1 & 0 & 0 \\
             0 & 0 & 1 & 0 \\
             0 & 0 & 0 & 1 \\
-            -\frac{a_1}{a_4} & -\frac{a_2}{a_4} & -\frac{a_2}{a_4} &  -1 \\
+            -\frac{a_0}{a_4} & -\frac{a_1}{a_4} & -\frac{a_2}{a_4} &  -\frac{a_3}{a_4}\\
         \end{pmatrix}
         \begin{pmatrix}
         x_1(t) \\
