--- a/VM/a/vm.tex
+++ b/VM/a/vm.tex
@@ -756,7 +756,7 @@ Gleichungen einzeln Linearisieren
   \begin{mdframed}[style=exercise]
     \begin{align}
         \delta \dot{x_1} = \frac{\partial f_1}{\partial x_1} \big|_{x_{1R}} \cdot \delta x_1
-        &+ \frac{\partial f_1}{\partial x_2} \big|_{x_{2R}} + \delta u_1 \\
+        &+ \frac{\partial f_1}{\partial x_2} \big|_{x_{2R}} \delta x_2+ \delta u_1 \\
         &...
     \end{align}
   \end{mdframed}
