adding some files

--- a/VM/a/vm.tex
+++ b/VM/a/vm.tex
@@ -135,6 +135,7 @@ Zustandsraumdarstellung:
   \end{mdframed}
 
 
+\newpage
 \section{Matrizenrechnung}
 \subsection{Eigenwerte und Eigenvektoren}
 Eine Zahl $\lambda \in \mathbb{C}$ heißt Eigenwert von Matrix $A$($n$x$n$),
@@ -584,7 +585,7 @@ Ein Hauptvektoren $t \in \mathbb{C}^n$ ist ein Vektor mit der Eigenschaft
   \end{mdframed}
 \end{enumerate}
 
-
+\newpage
 \section{Lösung DGL-Systeme}
 \subsection{Lineare zeitvariable DGL-Systeme}
   \begin{mdframed}[style=exercise]
@@ -756,7 +757,7 @@ Gleichungen einzeln Linearisieren
   \begin{mdframed}[style=exercise]
     \begin{align}
         \delta \dot{x_1} = \frac{\partial f_1}{\partial x_1} \big|_{x_{1R}} \cdot \delta x_1
-        &+ \frac{\partial f_1}{\partial x_2} \big|_{x_{2R}} \delta x_2+ \delta u_1 \\
+        &+ \frac{\partial f_1}{\partial x_2} \big|_{x_{2R}} \cdot \delta x_2+ \delta u_1 \\
         &...
     \end{align}
   \end{mdframed}
